--- a/Vienna/Interfaces/Base.lproj/MainWindowController.xib
+++ b/Vienna/Interfaces/Base.lproj/MainWindowController.xib
@@ -168,9 +168,6 @@
                             <real value="251"/>
                             <real value="250"/>
                         </holdingPriorities>
-                        <connections>
-                            <outlet property="delegate" destination="971" id="SHb-bg-Cde"/>
-                        </connections>
                     </splitView>
                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="659-iz-w4S" customClass="DisclosureView">
                         <rect key="frame" x="0.0" y="0.0" width="942" height="22"/>
@@ -358,7 +355,7 @@
             <rect key="frame" x="0.0" y="0.0" width="701" height="629"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <splitView horizontalHuggingPriority="251" horizontalCompressionResistancePriority="749" arrangesAllSubviews="NO" dividerStyle="paneSplitter" id="972">
+                <splitView horizontalHuggingPriority="251" horizontalCompressionResistancePriority="749" dividerStyle="paneSplitter" id="972">
                     <rect key="frame" x="0.0" y="0.0" width="701" height="629"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
