--- a/Vienna/Interfaces/Base.lproj/MainWindowController.xib
+++ b/Vienna/Interfaces/Base.lproj/MainWindowController.xib
@@ -538,6 +538,7 @@
                 <outlet property="fileImage" destination="1289" id="1294"/>
                 <outlet property="filenameField" destination="1292" id="1298"/>
                 <outlet property="filenameLabel" destination="1290" id="1299"/>
+                <outlet property="stackViewTrailingConstraint" destination="v5m-a9-btO" id="hIA-hH-1PZ"/>
             </connections>
             <point key="canvasLocation" x="-186" y="42.5"/>
         </customView>
